2006-03-08  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* java/rmi/server/UID.java (getMachineId): Include the host IP address.
    
2006-03-08  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* java/rmi/server/ObjID.java: Documented and autoformatted.

2006-03-08  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	PR 26584
	* tools/Makefile.am (install-data-local,
	uninstall-local): Install/uninstall the tools/README only.
	* tools/gnu/classpath/tools/giop/README: Updated.
	* tools/README: New file.

2006-03-08  Lillian Angel  <langel@redhat.com>

	* java/awt/GridBagLayout.java
	(GetLayoutInfo): If the last component added had gridwidth == REMAINDER,
	then the next item should be set to current_y (not 0).

2006-03-08  Lillian Angel  <langel@redhat.com>

	* java/awt/GridBagLayout.java
	(GetLayoutInfo): If gridy is RELATIVE and there is no component
	in the bottom-most spot of the column, we need to place that component
	at the y-location of the other components in that row. If there are
	no other components in that row, then place it at y = 0.

2006-03-08  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/ProgressMonitor.java: Updated API docs,
	* javax/swing/ProgressMonitorInputStream.java: Likewise.

2006-03-08  Michael Koch  <konqueror@gmx.de>

	* java/net/InetSocketAddress.java
	(InetSocketAddress(String,int,resolve)): New private contructor.
	(InetSocketAddress(String,int)): Use new private constructor.
	(createUnresolved): New method.

2006-03-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* java/rmi/server/UID.java (constructor): Assign last and time fields
 	after pause.

2006-03-07  Tom Tromey  <tromey@redhat.com>

	* java/lang/System.java (clearProperty): New method, merged from
	generics branch.
	(getProperty): Removed 'else'.
	(getProperty): Check for empty key.
	(setProperty): Likewise.
	* gnu/classpath/SystemProperties.java (remove): New method, merged
	from generics branch.
